--- a/src/components/subcomponents/AboutInfo/AboutInfo.css
+++ b/src/components/subcomponents/AboutInfo/AboutInfo.css
@@ -6,7 +6,7 @@
 }
 
 .ai-item:hover{
-  border-bottom: 4px solid #ccc;
+  border-bottom: 4px solid #ffbf00;
   cursor: pointer;
 }
 
@@ -14,13 +14,14 @@
   display: flex;
   line-height: 40px;
   justify-content: space-between;
+  margin-top: 64px;
 }
 
 @media screen and (min-width: 1200px){
   .AboutInfo{
     margin-left: 25%;
     margin-right: 25%;
-    margin-top: 120px;
+    margin-top: 32px;
     margin-bottom: 96px;
   }
 
@@ -36,7 +37,7 @@
   .AboutInfo{
     margin-left: 20%;
     margin-right: 20%;
-    margin-top: 96px;
+    margin-top: 32px;
     margin-bottom: 64px;
   }
 
@@ -51,7 +52,7 @@
   .AboutInfo{
     margin-left: 24px;
     margin-right: 24px;
-    margin-top: 96px;
+    margin-top: 32px;
     margin-bottom: 64px;
   }
 
