--- a/src/components/subcomponents/PortfolioItem/PortfolioItem.css
+++ b/src/components/subcomponents/PortfolioItem/PortfolioItem.css
@@ -21,8 +21,8 @@
   background-color: #222;
   border-radius: 100px;
 
-  padding-left: 8px;
-  padding-right: 8px;
+  padding-left: 16px;
+  padding-right: 16px;
 }
 
 .pi-role{
@@ -37,8 +37,8 @@
   background-color: #222;
   border-radius: 100px;
 
-  padding-left: 8px;
-  padding-right: 8px;
+  padding-left: 16px;
+  padding-right: 16px;
 }
 
 .pi-info{
@@ -59,7 +59,7 @@
     display: inline-block;
     height: 4px;
     width: 4px;
-    background-color: #222;
+    background-color: #484a47;
     border-radius: 50%;
 
     margin-bottom: 4px;
@@ -83,7 +83,7 @@
     display: inline-block;
     height: 4px;
     width: 4px;
-    background-color: #222;
+    background-color: #484a47;
     border-radius: 50%;
 
     margin-bottom: 4px;
